fixed spacing

--- a/Personal Site/UI/src/components/Homepage.css
+++ b/Personal Site/UI/src/components/Homepage.css
@@ -219,9 +219,8 @@ background: rgba(45, 120, 48, 0.95);
 color: white;
 display: flex;
 flex-direction: column;
-gap: 20px;
 align-items: flex-start; /* doesnt properly align */
-justify-content: center;
+justify-content: flex-start;
 padding: 20px;
 opacity: 0;
 transition: opacity 0.3s ease;
@@ -233,9 +232,9 @@ display: flex;
 flex-direction: row;
 gap: 15px;
 justify-content: flex-start; /* doesnt properly align */
-align-items: center;
-margin-top: -20px;
-padding-left: 20px
+align-items: flex-start;;
+margin-top: 10px;
+padding-left: 0px
 }
 
 .project-icons i {
